GearsetPOC/force-app/main/default/objects/Project__c/fields/Business_Objectives_and_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Business_Objectives_and_Benefits__c</fullName>
    <label>Business Objectives and Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>