GearsetPOC/force-app/main/default/objects/Project__c/fields/Business_Teams_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Business_Teams_Impacted__c</fullName>
    <label>Business Teams Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Terminals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>