GearsetPOC/force-app/main/default/objects/Project__c/fields/Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Deliverables__c</fullName>
    <label>Deliverables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>