GearsetPOC/force-app/main/default/objects/Project__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Enter the project duration in months. (eg: For 6 months, enter 6)</inlineHelpText>
    <label>Duration</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>