GearsetPOC/force-app/main/default/objects/Project__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <displayFormat>P{0000}</displayFormat>
    <externalId>true</externalId>
    <label>id</label>
    <type>AutoNumber</type>
</CustomField>