GearsetPOC/force-app/main/default/objects/Project__c/fields/IS_Teams__c.field-meta.xml
<CustomField>
    <fullName>IS_Teams__c</fullName>
    <label>IS_Teams</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Systems</fullName>
            </value>
            <value>
                <fullName>Corporate and Operations Systems</fullName>
            </value>
            <value>
                <fullName>Customer Systems</fullName>
            </value>
            <value>
                <fullName>Infrastructure Services</fullName>
            </value>
            <value>
                <fullName>IS Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>