GearsetPOC/force-app/main/default/objects/Project__c/fields/Key_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Key_Milestones__c</fullName>
    <label>Key Milestones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>