GearsetPOC/force-app/main/default/objects/Project__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Open</label>
    <type>Checkbox</type>
</CustomField>