GearsetPOC/force-app/main/default/objects/Project__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <inlineHelpText>Enter the project progress here. (eg: If the project is done by 50%, enter 0.5).</inlineHelpText>
    <label>Progress</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>