GearsetPOC/force-app/main/default/objects/Project__c/fields/Project_owner1__c.field-meta.xml
<CustomField>
    <fullName>Project_owner1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project_owner1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>