GearsetPOC/force-app/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Duration__c</columns>
    <columns>Status__c</columns>
    <columns>IS_Teams__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
    <language>en_US</language>
</ListView>